--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,11 @@ title: MPFE Consultancy Ltd
 remote_theme: hydecorp/hydejack@v9.1.2
 accent_image: /assets/img/mpfe-bg.jpg
 menu:
-  - title: Blog
-    url:   /blog/
+  - title: Home
+    url:   /
   - title: Projects
     url:   /projects/
   - title: About
     url:   /about/
+  - title: Blog
+    url:   /blog/
