--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: MPFE Consultancy Ltd
 remote_theme: hydecorp/hydejack@v9.1.2
-accent_image: /assets/img/mpfe-bg.jpg
+accent_image: /assets/img/mpfe-bg-windows.jpg
 menu:
   - title: Home
     url:   /
