--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description:  >
   MPFE Consultancy Ltd is an IT Services company providing UK businesses
   with Microsoft-centric DevOps, Infrastructure and Cloud expertise.
 # A shorter description for the sidebar.
-tagline: A DevOps, Infrastructure and Cloud Services Provider for UK businesses
+tagline: A DevOps, Infrastructure and Cloud Services Provider for UK business
 
 # A list of keywords for your blog
 keywords: [DevOps, Microsoft, Cloud, Azure, AWS, PowerShell, Infrastructure, Windows, Server]
@@ -24,7 +24,7 @@ keywords: [DevOps, Microsoft, Cloud, Azure, AWS, PowerShell, Infrastructure, Win
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo: /assets/img/logo-cropped.jpg
+logo: /assets/img/logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
