--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 remote_theme: hydecorp/hydejack@v9
+
 title: MPFE Consultancy Ltd
+
 accent_image: /assets/img/mpfe-bg-windows.jpg
+accent_color:          rgb(64,64,64)
+
 menu:
   - title: Home
     url:   /
@@ -30,3 +34,4 @@ logo: /assets/img/logo-cropped.jpg
 author:
   name: Mark Wragg
   email: mark@mpfe.uk
+
