--- a/_config.yml
+++ b/_config.yml
@@ -34,4 +34,7 @@ logo: /assets/img/logo-cropped.jpg
 author:
   name: Mark Wragg
   email: mark@mpfe.uk
+  social:
+    twitter: markwragg
+    linkedin: https://www.linkedin.com/company/mpfe/
 
