--- a/_config.yml
+++ b/_config.yml
@@ -35,5 +35,5 @@ author:
   name: Mark Wragg
   email: mark@mpfe.uk
   twitter: markwragg
-  linkedin: https://www.linkedin.com/company/mpfe/
+  linkedin: company/mpfe
 
