--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -53,7 +53,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    linkedin:        mpfe
+    LinkedIn:        mpfe
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
