--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ menu:
   - title: Projects
     url:   /projects/
   - title: Blog
-    url:   /_posts/
+    url:   /blog/
 
 lang: en
 description:  >
@@ -34,3 +34,13 @@ logo: /assets/img/logo-cropped.jpg
 author:
   name: Mark Wragg
   email: mark@mpfe.uk
+
+copyright:             © 2021. All rights reserved.
+
+# Format of the permalinks
+permalink:             /:categories/:year-:month-:day-:title/
+
+# Pagination configuration (used by the `blog` layout)
+paginate:              10
+paginate_path:         /:num/
+
