--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ menu:
     url:   /about/
   - title: Projects
     url:   /projects/
+  - title: Blog
+    url:   /blog/
     
 collections:
   featured_categories:
