--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,11 @@ author1:
     
   # This photo will be used in the about section
   picture:
-    path:            https://placehold.it/128x128
+    path:            https://mpfe.uk/assets/img/MarkWragg.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+      1x:            https://mpfe.uk/assets/img/MarkWragg.png
+      2x:            https://mpfe.uk/assets/img/MarkWragg.png
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
@@ -49,11 +49,11 @@ author1:
     # pinterest:       <username>
     # foursquare:      <number>
     # yelp:            <string>
-    # stackoverflow:   <number/username>
+    stackoverflow:   markwragg
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    LinkedIn:        mpfe
+    # LinkedIn:        mpfe
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
