--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ logo: /assets/img/logo-cropped.jpg
 author:
   name: Mark Wragg
   email: mark@mpfe.uk
+  LinkedIn: mpfe
 
 copyright:             © 2021. All rights reserved.
 
