--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,32 @@
 # The primary author of this blog.
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
-author1:
+author:
+  name:              MPFE
+  email:             enquiries@mpfe.uk
+  LinkedIn:          mpfe
+
+  # Used at the bottom of each page and at the top of the `about` layout
+  # Markdown enabled, can use multiple paragraphs (enabled by `|`)
+  about:             |
+    
+  # This photo will be used in the about section
+  picture:
+    path:            https://mpfe.uk/assets/img/MarkWragg.png
+    # srcset is optional, but can be used to provide higher res versions for retina displays
+    srcset:
+      1x:            https://mpfe.uk/assets/img/MarkWragg.png
+      2x:            https://mpfe.uk/assets/img/MarkWragg.png
+
+  # Social media icons in sidebar
+  # Comment/uncommet to show/hide
+  # Rearrange to change the order in which they appear
+  social:
+    twitter:         markwragg
+    email:           enquiries@mpfe.uk
+    LinkedIn:        mpfe
+
+mark:
   name:              Mark Wragg
   email:             mark@mpfe.uk
 
@@ -23,7 +48,9 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     twitter:         markwragg
-    email:           enquiries@mpfe.uk
+    email:           mark@mpfe.uk
+    github:          markwragg
+    stackoverflow:   2796058/mark-wragg
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -48,11 +75,9 @@ author1:
     # pinterest:       <username>
     # foursquare:      <number>
     # yelp:            <string>
-    stackoverflow:   2796058/mark-wragg
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    LinkedIn:        mpfe
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
