--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,11 +12,11 @@ author:
     
   # This photo will be used in the about section
   picture:
-    path:            https://mpfe.uk/assets/img/MarkWragg.png
+    path:            https://mpfe.uk/assets/img/logo.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://mpfe.uk/assets/img/MarkWragg.png
-      2x:            https://mpfe.uk/assets/img/MarkWragg.png
+      1x:            https://mpfe.uk/assets/img/logo.png
+      2x:            https://mpfe.uk/assets/img/logo.png
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
