--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,7 +23,7 @@ author:
   # Rearrange to change the order in which they appear
   social:
     email:           enquiries@mpfe.uk
-    twitter:         markwragg
+    twitter:         MPFEConsultancy
     LinkedIn:        mpfe
 
 mark:
