--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ author:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    
+
   # This photo will be used in the about section
   picture:
     path:            https://mpfe.uk/assets/img/logo.png
@@ -23,7 +23,7 @@ author:
   # Rearrange to change the order in which they appear
   social:
     email:           enquiries@mpfe.uk
-    twitter:         MPFEConsultancy
+    bluesky:         mpfe.uk
     LinkedIn:        mpfe
 
 mark:
@@ -34,7 +34,7 @@ mark:
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
     Mark Wragg is the Director of MPFE Consultancy Ltd.
-    
+
   # This photo will be used in the about section
   picture:
     path:            https://mpfe.uk/assets/img/MarkWragg.png
@@ -47,7 +47,7 @@ mark:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         markwragg
+    bluesky:         wragg.io
     email:           mark@mpfe.uk
     github:          markwragg
     stackoverflow:   2796058/mark-wragg
