--- a/_data/social.yml
+++ b/_data/social.yml
@@ -206,3 +206,7 @@ keybase:
 download:
   name: Download
   icon: icon-box-add
+bluesky:
+  name: Bluesky
+  icon: icon-bluesky
+  prepend: 'https://bsky.app/profile/'
