--- a/_data/social.yml
+++ b/_data/social.yml
@@ -208,5 +208,5 @@ download:
   icon: icon-box-add
 bluesky:
   name: Bluesky
-  icon: icon-bluesky
+  icon: icon-butterfly
   prepend: 'https://bsky.app/profile/'
